--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <script src="js/labelgun.min.js"></script>
         <script src="js/labels.js"></script>
         <script src="js/leaflet-measure.js"></script>
-        <script src="data/ForrestParkParkTrails_4.js"></script>
+        <script src="ForrestParkParkTrails_4.js"></script>
         <script>
         var map = L.map('map', {
             zoomControl:true, maxZoom:28, minZoom:1
@@ -55,7 +55,7 @@
         }
         map.createPane('pane_POtry05copycopy_0');
         map.getPane('pane_POtry05copycopy_0').style.zIndex = 400;
-        var img_POtry05copycopy_0 = 'data/POtry05copycopy_0.png';
+        var img_POtry05copycopy_0 = 'POtry05copycopy_0.png';
         var img_bounds_POtry05copycopy_0 = [[45.564563491355,-122.84241565972607],[45.62685878561326,-122.57764446036657]];
         var layer_POtry05copycopy_0 = new L.imageOverlay(img_POtry05copycopy_0,
                                               img_bounds_POtry05copycopy_0,
@@ -64,7 +64,7 @@
         map.addLayer(layer_POtry05copycopy_0);
         map.createPane('pane_POtry05copy_1');
         map.getPane('pane_POtry05copy_1').style.zIndex = 401;
-        var img_POtry05copy_1 = 'data/POtry05copy_1.png';
+        var img_POtry05copy_1 = 'POtry05copy_1.png';
         var img_bounds_POtry05copy_1 = [[45.564563491355,-122.84241565972607],[45.62685878561326,-122.57764446036657]];
         var layer_POtry05copy_1 = new L.imageOverlay(img_POtry05copy_1,
                                               img_bounds_POtry05copy_1,
